--- a/package.json
+++ b/package.json
@@ -18,14 +18,42 @@
   "license": "ISC",
   "devDependencies": {
     "@types/electron": "^1.6.10",
+    "@types/electron-devtools-installer": "^2.2.0",
+    "@types/jest": "^24.0.11",
+    "@types/react": "^16.8.13",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-hot-loader": "^4.1.0",
+    "@types/react-test-renderer": "^16.8.1",
+    "@types/webdriverio": "^5.0.0",
+    "@types/webpack-env": "^1.13.9",
     "awesome-typescript-loader": "^5.2.1",
+    "css-loader": "^2.1.1",
     "electron": "^4.1.4",
+    "electron-builder": "^20.39.0",
+    "electron-devtools-installer": "^2.2.4",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.17.0",
     "react-hot-loader": "^4.8.4",
+    "sass-loader": "^7.1.0",
+    "source-map-loader": "^0.2.4",
+    "spectron": "^5.0.0",
+    "style-loader": "^0.23.1",
+    "tslint": "^5.15.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^4.0.0",
     "typescript": "^3.4.3",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.2.1"
+  },
+  "dependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
