--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "b-m-dev": "",
     "b-r-dev": "",
     "build": "",
-    "m-dev": "webpack --config ./config/webpack/webpack.main.config.js && electron ./dist/main.js",
+    "m-dev": "webpack --config ./config/webpack/webpack.main.dev.config.js && electron ./dist/main.js",
     "r-dev": "webpack-dev-server --config ./config/webpack/webpack.renderer.dev.config.js",
     "dev": "cross-env START_HOT=1 npm run start-renderer-dev",
     "start": "electron .",
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.4.5",
     "@types/electron": "^1.6.10",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/jest": "^24.0.11",
@@ -48,7 +49,7 @@
     "typescript": "^3.4.3",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0",
+    "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.2.1"
   },
